--- a/whatdoyoumeme/frontend/home.html
+++ b/whatdoyoumeme/frontend/home.html
@@ -11,12 +11,20 @@
 
 <body>
     <div class="container">
-        <div class="text-center">
-            <div id="memepicture"></div>
-            <h2 class="m-4">Choose a quote to the picture</h2>
+        <div class="row m-2">
+            <div class="col-12">
+                <a href="allpictures.html" class="btn btn-primary" role="button">alle Pictures</a>
+                <a href="allquotes.html" class="btn btn-primary" role="button">alle Quotes</a>
+                <a href="allmemes.html" class="btn btn-primary" role="button">alle Memes</a>
+            </div>
+            <div class="row">
+                <div class="text-center">
+                    <div id="memepicture"></div>
+                    <h2 class="m-4">Choose a quote to the picture</h2>
+                </div>
+            </div>
             <div id="memequotes" class="row"></div>
         </div>
-    </div>
 
 
 
@@ -42,7 +50,7 @@
 
         data.forEach((randomquote) => {
             let col = document.createElement('div');
-            col.classList.add('col', 'm-1');
+            col.classList.add('col-3');
 
             let carddiv = document.createElement("div");
             carddiv.classList.add('card', 'bg-primary');
@@ -105,9 +113,7 @@
         fetch('http://localhost:8080/api/whatdoyoumeme/memes/' + pid + '/' + qid, {
             method: 'GET'
         })
-            .then(response => console.log(response.status));
-
-        document.location.reload();
+            .then(response => response.status == 200 ? document.location.reload() : console.log(response.status));
     }
 </script>
 
