--- a/whatdoyoumeme/frontend/allpictures.html
+++ b/whatdoyoumeme/frontend/allpictures.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Alle Pictures</h1>
         <hr class="border-2 border-top border-primary">
-        <a href="allpictures.html" class="btn btn-primary" role="button">alle Pictures</a>
+        <a href="allmemes.html" class="btn btn-primary" role="button">alle Memes</a>
         <a href="allquotes.html" class="btn btn-primary" role="button">alle Quotes</a>
         <a href="home.html" class="btn btn-primary" role="button">What do you Meme?</a>
         <hr class="border-2 border-top border-primary">
