--- a/whatdoyoumeme/frontend/updatepicture.html
+++ b/whatdoyoumeme/frontend/updatepicture.html
@@ -122,13 +122,13 @@
 
 
             if (data.code) {
-                if (data.code == 1000 && data.formValidationErrors) {
-                    if (data.formValidationErrors.name) {
-                        $('#nameError').html(data.formValidationErrors.name)
+                if (data.code == 1000 && data.formValidationsErrors) {
+                    if (data.formValidationsErrors.name) {
+                        $('#nameError').html(data.formValidationsErrors.name)
                     }
 
-                    if (data.formValidationErrors.kategorie) {
-                        $('#katError').html(data.formValidationErrors.kategorie)
+                    if (data.formValidationsErrors.kategorie) {
+                        $('#katError').html(data.formValidationsErrors.kategorie)
                     }
                 } else if (data.code == 1010 & data.message) {
                     $('#inputresponse').html("Picture nicht gefunden!")
@@ -140,7 +140,7 @@
             }
 
         } catch (error) {
-            alert("Fehler!")
+            console.log("Fehler beim Update von Picture");
         }
     }
 </script>
