ad quote, all memes, all quotes, update picture rest controller

--- a/whatdoyoumeme/frontend/allquotes.html
+++ b/whatdoyoumeme/frontend/allquotes.html
@@ -18,6 +18,7 @@
         <a href="allmemes.html" class="btn btn-primary" role="button">alle Memes</a>
         <a href="home.html" class="btn btn-primary" role="button">What do you Meme?</a>
         <hr class="border-2 border-top border-primary">
+        <a href="addquote.html" class="btn btn-secondary" role="button">Add Quote</a>
         <div id="memequotes" class="row">
 
         </div>
