--- a/whatdoyoumeme/frontend/allmemes.html
+++ b/whatdoyoumeme/frontend/allmemes.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="jquery-3.6.3.min.js"></script>
     <title>What Do You Meme?</title>
 </head>
@@ -62,10 +63,17 @@
             let date = document.createElement("p");
             date.appendChild(document.createTextNode(meme.date));
 
+            let btngroup = document.createElement("div");
+            btngroup.classList.add('btn-group');
+
+            let heart = document.createElement("button");
+            heart.innerHTML = '<span class="material-symbols-outlined">favorite</span>';
+            heart.classList.add('btn', 'btn-danger');
+            heart.addEventListener("click", function like() { addLike(meme.id); });
+            heart.setAttribute("id", "like");
+            
             let likes = document.createElement("button");
-            likes.addEventListener("click", function like() { addLike(meme.id); });
             likes.innerHTML = meme.likes;
-            likes.setAttribute("id", "like");
             likes.classList.add('btn', 'btn-secondary');
             //action.innerHTML = `<a href="updateMeme.html?id=${quote.id}&name=${student.name}&plz=${student.plz}" class="btn btn-primary" role="button">bearbeiten</a> <button type="button" class="btn btn-warning" onclick="deleteStudent(${student.id})">löschen</button>`
 
@@ -76,21 +84,19 @@
             carddiv.appendChild(cardbody);
             cardbody.appendChild(quote);
             cardbody.appendChild(date);
-            cardbody.appendChild(likes);
+            cardbody.appendChild(btngroup);
+            btngroup.appendChild(heart);
+            btngroup.appendChild(likes);
 
         })
     }
 
 
     async function addLike(id) {
-        //TODO like wird nicht aktualisiert
         fetch('http://localhost:8080/api/whatdoyoumeme/meme/like/' + id, {
             method: 'GET'
         })
-            .then(response => console.log(response.status));
-
-            console.log(document.getElementById('like').value);
-
+        .then(response => response.status == 200 ? document.location.reload() : console.log(response.status));
     }
 
 
